	using install.packages(dependencies = NA).

    o	The 'save as' file dialogs from the 'File' menu in a graphics
	window now add an appropriate extension to the file name.  To
	specify a file name without an extension, put the name in
	quotes, e.g.  "foo".  (As requested in PR#9336.)

    o	There is support in both Rgui and Rterm for function name
	completion via the TAB key using package rcompgen >= 0.1-7.
	This is automatically enabled if that package is installed.


FUNCTION CHANGES

    o	Sys.getenv() has been changed to use the C-level environment and
	not the Windows environment block for the process, for
	consistency with Sys.getenv("FOO"), Sys.setenv() and
	Sys.unsetenv().  A few Windows-specific environment variables
	(such as =C:) no longer appear.

    o	https:// URLs can be accessed by download.file() and url() if
	--internet2 is used (and provided the certificate is accepted as
	valid).

    o	bitmap() and dev2bitmap() will now accept paths in 'GS_CMD' and 'file'
	which contain spaces (by converting to short path names inside the
	functions).

    o	system() gains an 'ignore.stderr' argument for consistency with Unix.
	(This changes the order of arguments.)  The defaults have been changed
	to 'show.output.on.console=TRUE, invisible=TRUE' which make system()
	in Rgui more consistent with Rterm and with other ports of R.

    o	For consistency with Unix, system(intern=TRUE) and pipe(, "r")
	connections no longer capture stderr, only stdout (except on Rgui if
	ignore.stderr = FALSE, since there is no separate stderr).


OTHERS

    o	This file (CHANGES) has been reformatted to be readable by the
    	readNEWS() function.

    o	The printf function used for printing has been altered to
	implement a round-to-even rule.  This means that output is
	more likely to be identical to that on Unix-alikes.

    o	R CMD INSTALL now installs by default into the first library on
	the library path if R was run in the current environment.