@@ -33,8 +33,9 @@ GUI CHANGES
 	quotes, e.g.  "foo".  (As requested in PR#9336.)
 
     o	There is support in both Rgui and Rterm for function name
-	completion via the TAB key using package rcompgen >= 0.1-7.
-	This is automatically enabled if that package is installed.
+	completion via the TAB key using package rcompgen.  This can
+	be disabled by setting the environment variable
+	R_COMPLETION=FALSE when starting R (e.g. in ~/.Renviron).
 
 
 FUNCTION CHANGES
